--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 project(cerberus)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_C_STANDARD 11)
 
-add_subdirectory(apps)
-
-add_executable(cerberus main.cpp)
+add_executable(main main.c)
