--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,9 @@ cmake_minimum_required(VERSION 3.19)
 project(cerberus)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wconversion")
 
-add_executable(main main.c)
+add_subdirectory(external)
+
+add_subdirectory(utils)
+add_subdirectory(apps)
