Adding cv library to host computer vision stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wconversion")
 
 add_subdirectory(external)
 
+add_subdirectory(cv)
 add_subdirectory(cerberus)
 
 add_subdirectory(vis)
