--- a/vis/CMakeLists.txt
+++ b/vis/CMakeLists.txt
@@ -3,7 +3,8 @@ project(vis)
 
 include_directories(include)
 add_library(${PROJECT_NAME}
-        src/main_window.c)
+        src/main_window.c
+        src/image_window.c)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
-target_link_libraries(${PROJECT_NAME} glad glfw cimgui)
+target_link_libraries(${PROJECT_NAME} glad glfw cimgui cv)
