Adding geodetic functionality to increment positions by a enu vector, also made existing methods use new units library

--- a/geodetic/CMakeLists.txt
+++ b/geodetic/CMakeLists.txt
@@ -5,5 +5,6 @@ include_directories(include)
 add_library(${PROJECT_NAME}
         src/geodetic.c)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_link_libraries(${PROJECT_NAME} core)
 
 add_subdirectory(tests)
