Expanding core to include more libraries
Linear algebra will hold matrix/vector stuff
Types will handle common things like radians/degrees, angles, etc.

--- a/core/types/CMakeLists.txt
+++ b/core/types/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
-project(geodetic)
+project(types)
 
 include_directories(include)
 add_library(${PROJECT_NAME}
-        src/geodetic.c)
+        src/rotation_matrix.c
+        src/orientation_conversions.c)
+
 target_include_directories(${PROJECT_NAME} PUBLIC include)
-target_link_libraries(${PROJECT_NAME} types)
+target_link_libraries(${PROJECT_NAME} linear_algebra)
 
 add_subdirectory(tests)
