--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,3 +5,5 @@ target_link_libraries(stereo_kitti utils)
 
 add_executable(gui_playground gui_playground/main.c)
 target_link_libraries(gui_playground utils gui)
+
+add_executable(inertial_simulation inertial_simulation/main.c)
