Adding 3x3 matrix multiplication

--- a/core/linear_algebra/CMakeLists.txt
+++ b/core/linear_algebra/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 project(linear_algebra)
 
 include_directories(include)
-add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE include)
+add_library(${PROJECT_NAME}
+        src/matrix3d.c)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
+
+add_subdirectory(tests)
