Add 3x1 vector object

--- a/core/linear_algebra/CMakeLists.txt
+++ b/core/linear_algebra/CMakeLists.txt
@@ -3,7 +3,8 @@ project(linear_algebra)
 
 include_directories(include)
 add_library(${PROJECT_NAME}
-        src/matrix3d.c)
+        src/matrix3d.c
+        src/vector3d.c)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
 add_subdirectory(tests)
