Adding orb feature detection to cv lib, removing it from cerberus. Update kitti reader to use image type, not raw pointers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(core)
 add_subdirectory(geodetic)
 add_subdirectory(inertial)
 add_subdirectory(cv)
-add_subdirectory(cerberus)
+#add_subdirectory(cerberus)
 
 add_subdirectory(gui)
 add_subdirectory(utils)
