--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -5,3 +5,4 @@ include_directories(include)
 add_library(${PROJECT_NAME}
         src/kitti_data_reader.c)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_link_libraries(${PROJECT_NAME} cv)
