Added a lot, some basic vec/mat objects, camera3d for gui, grid for gui, and so on

--- a/core/linear_algebra/tests/CMakeLists.txt
+++ b/core/linear_algebra/tests/CMakeLists.txt
@@ -2,7 +2,8 @@ project(linear_algebra_tests)
 
 add_executable(${PROJECT_NAME}
         main.cpp
-        tests_matrix3d.cpp)
+        tests_matrix3d.cpp
+        tests_matrix4f.cpp)
 
 target_link_libraries(${PROJECT_NAME}
         linear_algebra
